Move to fit.mC format

--- a/examples/example_3dq8.ipynb
+++ b/examples/example_3dq8.ipynb
@@ -22,7 +22,6 @@
     }
    ],
    "source": [
-    "import sys\n",
     "import surfinBH"
    ]
   },
@@ -39,28 +38,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Download fit data, this only needs to be done once"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "surfinBH.DownloadData(fit_name)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Load the fit, this only needs to be done once at the start of a script"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -108,7 +91,40 @@
       " |  However, it extrapolates reasonably to:\n",
       " |      q <= 10, |chiAz| <= 1, |chiBz| <= 1\n",
       " |  \n",
-      " |  See __call__ method for evaluation.\n",
+      " |  =========================================================================\n",
+      " |  Usage:\n",
+      " |  \n",
+      " |  import surfinBH\n",
+      " |  \n",
+      " |  # Load the fit\n",
+      " |  fit = surfinBH.LoadFits('surfinBH3dq8')\n",
+      " |  \n",
+      " |  # Define params\n",
+      " |  q = 4.3             # Mass ratio q>=1\n",
+      " |  chiA = [0,0,0.6]    # Spin of larger BH (z-direction only)\n",
+      " |  chiB = [0,0,-0.7]   # Spin of smaller BH (z-direction only)\n",
+      " |  \n",
+      " |  ## Evaluate fits\n",
+      " |  \n",
+      " |  # remnant mass and 1-sigma error estimate\n",
+      " |  mC, mC_err = fit.mC(q, chiA, chiB)\n",
+      " |  \n",
+      " |  # remnant spin and 1-sigma error estimate\n",
+      " |  chiC, chiC_err = fit.chiC(q, chiA, chiB)\n",
+      " |  \n",
+      " |  # remnant recoil kick and 1-sigma error estimate\n",
+      " |  velC, velC_err = fit.velC(q, chiA, chiB)\n",
+      " |  \n",
+      " |  # All of these together\n",
+      " |  mC, chiC, velC, mC_err, chiC_err, velC_err = fit.all(q, chiA, chiB)\n",
+      " |  \n",
+      " |  The spin and kick vectors are defined in the coorbital frame at t=-100 M\n",
+      " |  from the peak of the waveform. This frame is defined as:\n",
+      " |  The z-axis is along the orbital angular momentum direction of the binary.\n",
+      " |  The x-axis is along the line of separation from the smaller BH to\n",
+      " |      the larger BH at this time.\n",
+      " |  The y-axis completes the triad.\n",
+      " |  We obtain this frame from the waveform as defined in arxiv:1705.07089.\n",
       " |  \n",
       " |  Method resolution order:\n",
       " |      Fit3dq8\n",
@@ -117,42 +133,38 @@
       " |  \n",
       " |  Methods defined here:\n",
       " |  \n",
-      " |  __call__(self, fit_key, x, **kwargs)\n",
-      " |      Evaluates the surfinBH3dq8 model.\n",
-      " |      \n",
-      " |      Arguments:\n",
-      " |          fit_key:\n",
-      " |              'mC', 'chiC' or 'velC', for remnant mass, spin and kick velocity,\n",
-      " |              respectively.\n",
-      " |      \n",
-      " |          x:\n",
-      " |              Array of [q, chiAz, chiBz], where q >= 1 is the mass ratio and\n",
-      " |              chiAz (chiBz) is the dimensionless spin of the larger (smaller) BH\n",
-      " |              along the z-direction.\n",
-      " |      \n",
-      " |      Returns:\n",
-      " |          If fit_key='mC':\n",
-      " |              returns mC, mC_err_est\n",
-      " |              The value and 1-sigma error estimate in remnant mass.\n",
-      " |          If fit_key='chiC':\n",
-      " |              returns chiCz, chiCz_err_est:\n",
-      " |              The value and 1-sigma error estimate in remnant spin along the\n",
-      " |              z-direction.\n",
-      " |          If fit_key='velC':\n",
-      " |              returns [velCx, velCy], [velCx_err_est, velCy_err_est]:\n",
-      " |              The value and 1-sigma error estimate in the in-plane remnant kick\n",
-      " |              vector.\n",
-      " |      \n",
-      " |      The spins and kick are defined in the coorbital frame at t=-100 M from the\n",
-      " |      peak of the waveform. This frame is defined as:\n",
-      " |      The z-axis is along the orbital angular momentum direction of the binary.\n",
-      " |      The x-axis is along the line of separation from the smaller BH to\n",
-      " |          the larger BH at this time.\n",
-      " |      The y-axis completes the triad.\n",
-      " |      We obtain this frame from the waveform as defined in arxiv:1705.07089.\n",
-      " |  \n",
       " |  __init__(self, name)\n",
       " |      #-------------------------------------------------------------------------\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Methods inherited from surfinBH.surfinBH.SurFinBH:\n",
+      " |  \n",
+      " |  all(self, *args, **kwargs)\n",
+      " |      Evaluates fit and 1-sigma error estimate for remnant mass, spin\n",
+      " |      and kick velocity.\n",
+      " |      Returns:\n",
+      " |          mC, chiC, velC, mC_err_est, chiC_err_est, velC_err_est\n",
+      " |      \n",
+      " |      chiC, velC, chiC_err_est and velC_err_est are arrays of size 3.\n",
+      " |  \n",
+      " |  chiC(self, *args, **kwargs)\n",
+      " |      Evaluates fit and 1-sigma error estimate for remnant spin.\n",
+      " |      Returns:\n",
+      " |          chiC, chiC_err_est\n",
+      " |      \n",
+      " |      chiC and chiC_err_est are arrays of size 3.\n",
+      " |  \n",
+      " |  mC(self, *args, **kwargs)\n",
+      " |      Evaluates fit and 1-sigma error estimate for remnant mass.\n",
+      " |      Returns:\n",
+      " |          mC, mC_err_est\n",
+      " |  \n",
+      " |  velC(self, *args, **kwargs)\n",
+      " |      Evaluates fit and 1-sigma error estimate for remnant kick velocity.\n",
+      " |      Returns:\n",
+      " |          velC, velC_err_est\n",
+      " |      \n",
+      " |      velC and velC_err_est are arrays of size 3.\n",
       " |  \n",
       " |  ----------------------------------------------------------------------\n",
       " |  Data descriptors inherited from surfinBH.surfinBH.SurFinBH:\n",
@@ -179,42 +191,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mC=9.756e-01 mC_err_est=1.648e-04\n",
-      "chiCz=8.253e-01 chiCz_err_est=7.871e-05\n",
-      "velC=[-5.894e-05,-8.398e-05,0] velC_err_est=[1.945e-05,2.148e-05,0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "q = 6.7\n",
-    "chi1z = 0.74\n",
-    "chi2z = -0.6\n",
-    "x = [q, chi1z, chi2z]\n",
+    "q = 4.3             # Mass ratio q>=1\n",
+    "chiA = [0,0,0.6]    # Spin of larger BH (z-direction only)\n",
+    "chiB = [0,0,-0.7]   # Spin of smaller BH (z-direction only)\n",
     "\n",
     "## Evaluate the fits and GPR error estimate.\n",
     "\n",
-    "# Final mass and its 1-sigma error etimate\n",
-    "mC, mC_err_est = fit('mC', x)\n",
-    " \n",
-    "# Final spin and its 1-sigma error estimate\n",
-    "chiCz, chiCz_err_est = fit('chiC', x)\n",
-    "  \n",
-    "# Final kick vector and its 1-sigma error estimate\n",
-    "velC, velC_err_est = fit('velC', x)\n",
-    "velCx, velCy = velC\n",
-    "velCx_err_est, velCy_err_est = velC_err_est\n",
+    "# remnant mass and 1-sigma error estimate\n",
+    "mC, mC_err = fit.mC(q, chiA, chiB)\n",
     "\n",
-    "print('mC=%.3e mC_err_est=%.3e'%(mC, mC_err_est))\n",
-    "print('chiCz=%.3e chiCz_err_est=%.3e'%(chiCz, chiCz_err_est))\n",
-    "print('velC=[%.3e,%.3e,0] velC_err_est=[%.3e,%.3e,0]'%(velCx, velCy, velCx_err_est,\n",
-    "                                                       velCy_err_est))\n"
+    "# remnant spin and 1-sigma error estimate\n",
+    "chiC, chiC_err = fit.chiC(q, chiA, chiB)\n",
+    "\n",
+    "# remnant recoil kick and 1-sigma error estimate\n",
+    "velC, velC_err = fit.velC(q, chiA, chiB)\n",
+    "\n",
+    "# All of these together\n",
+    "mC, chiC, velC, mC_err, chiC_err, velC_err = fit.all(q, chiA, chiB)"
    ]
   },
   {
