--- a/examples/example_7dq2.ipynb
+++ b/examples/example_7dq2.ipynb
@@ -22,7 +22,6 @@
     }
    ],
    "source": [
-    "import sys\n",
     "import surfinBH"
    ]
   },
@@ -39,28 +38,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Download fit data, this only needs to be done once"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "surfinBH.DownloadData(fit_name)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Load the fit, this only needs to be done once at the start of a script"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -108,7 +91,91 @@
       " |  However, it extrapolates reasonably to:\n",
       " |      q <= 3, |chiA| <= 1, |chiB| <= 1\n",
       " |  \n",
-      " |  See __call__ method for evaluation.\n",
+      " |  =========================================================================\n",
+      " |  Usage:\n",
+      " |  \n",
+      " |  import surfinBH\n",
+      " |  \n",
+      " |  # Load the fit\n",
+      " |  fit = surfinBH.LoadFits('surfinBH7dq2')\n",
+      " |  \n",
+      " |  We provide the following call methods:\n",
+      " |      # remnant mass and 1-sigma error estimate\n",
+      " |      mC, mC_err = fit.mC(q, chiA, chiB, **kwargs)\n",
+      " |  \n",
+      " |      # remnant spin and 1-sigma error estimate\n",
+      " |      chiC, chiC_err = fit.chiC(q, chiA, chiB, **kwargs)\n",
+      " |  \n",
+      " |      # remnant recoil kick and 1-sigma error estimate\n",
+      " |      velC, velC_err = fit.velC(q, chiA, chiB, **kwargs)\n",
+      " |  \n",
+      " |      # All of these together\n",
+      " |      mC, chiC, velC, mC_err, chiC_err, velC_err\n",
+      " |          = fit.all(q, chiA, chiB, **kwargs)\n",
+      " |  \n",
+      " |  The arguments for each of these call methods are as follows:\n",
+      " |  Arguments:\n",
+      " |      q:      Mass ratio (q>=1)\n",
+      " |  \n",
+      " |      chiA:   Dimensionless spin of the larger BH (array of size 3)\n",
+      " |  \n",
+      " |      chiB:   Dimensionless spin of the smaller BH (array of size 3)\n",
+      " |  \n",
+      " |          By default, the spins are assumed to be the component spins at\n",
+      " |          t=-100 M from the peak of the waveform, and in the coorbital frame,\n",
+      " |          defined as:\n",
+      " |          The z-axis is along the orbital angular momentum at t=-100M.\n",
+      " |          The x-axis is along the line of separation from the smaller BH to\n",
+      " |              the larger BH at this time.\n",
+      " |          The y-axis completes the triad.\n",
+      " |          We obtain this frame from the waveform as defined in\n",
+      " |          arxiv:1705.07089.\n",
+      " |          The returned spin and kick vectors are also in the same frame.\n",
+      " |  \n",
+      " |          If 'omega0' is given, instead the spins are assumed to be the\n",
+      " |          component spins when the PN orbital frequency = omega0. The\n",
+      " |          spins are assumed to be in the inertial frame, defined as:\n",
+      " |          The z-axis is along the Newtonian orbital angular momentum when the\n",
+      " |              PN orbital frequency = omega0.\n",
+      " |          The x-axis is along the line of separation from the smaller BH to\n",
+      " |              the larger BH at this frequency.\n",
+      " |          The y-axis completes the triad.\n",
+      " |          We obtain this frame from PN.\n",
+      " |          Given the spins at omega0, we evolve the spins using PN until\n",
+      " |          the orbital frequency = 0.018 M, then we further evolve the spins\n",
+      " |          using the NRSur7dq2 model (arxiv:1705.07089) until t=-100M from the\n",
+      " |          peak of the waveform.  Then we evaluate the fits using the spins at\n",
+      " |          t=-100 M.  Finally, we transform the remnant spin and kick vectors\n",
+      " |          back to the inertial frame defined above.\n",
+      " |  \n",
+      " |  Optional PN arguments:\n",
+      " |  \n",
+      " |      omega0:\n",
+      " |          Initial dimensionless orbital frequency in units of 1/M, where M is\n",
+      " |          the total mass. If this is given, the spins in x are assumed to be\n",
+      " |          the component spins at this orbital frequency, and in the inertial\n",
+      " |          frame as defined above. The returned remnant spin and kick vectors\n",
+      " |          are also in the same frame.\n",
+      " |          Default: None.\n",
+      " |  \n",
+      " |      PN_approximant:\n",
+      " |          Approximant used to do the PN spin evolution. Choose from\n",
+      " |          'SpinTaylorT4', 'SpinTaylorT1' or 'SpinTaylorT2'.\n",
+      " |          Default: 'SpinTaylorT4'.\n",
+      " |  \n",
+      " |      PN_dt:\n",
+      " |          Dimensionless time step size in units of M (total mass), used for\n",
+      " |          the PN evolution. You may need to increase this if omega0 is very\n",
+      " |          low.\n",
+      " |          Default: 0.1\n",
+      " |  \n",
+      " |      PN_spin_order:\n",
+      " |          Twice the PN order of spin effects. E.g., use 7 for 3.5PN.\n",
+      " |          Default: 7\n",
+      " |  \n",
+      " |      PN_phase_order\n",
+      " |          Twice the PN order in phase. E.g., use 7 for 3.5PN.\n",
+      " |          Default: 7\n",
       " |  \n",
       " |  Method resolution order:\n",
       " |      Fit7dq2\n",
@@ -117,92 +184,38 @@
       " |  \n",
       " |  Methods defined here:\n",
       " |  \n",
-      " |  __call__(self, fit_key, x, **kwargs)\n",
-      " |      Evaluates the surfinBH7dq2 model.\n",
-      " |      \n",
-      " |      Arguments:\n",
-      " |          fit_key:\n",
-      " |              'mC', 'chiC' or 'velC', for remnant mass, spin vector and kick\n",
-      " |              vector respectively.\n",
-      " |      \n",
-      " |          x:\n",
-      " |              Array of [q, chiAx, chiAy, chiAz, chiBx, chiBy, chiBz], where q >=\n",
-      " |              1 is the mass ratio and chiA (chiB) is the dimensionless spin of\n",
-      " |              the larger (smaller) BH.\n",
-      " |      \n",
-      " |              By default, the spins are assumed to be the component spins at\n",
-      " |              t=-100 M from the peak of the waveform, and in the coorbital frame,\n",
-      " |              defined as:\n",
-      " |              The z-axis is along the orbital angular momentum at t=-100M.\n",
-      " |              The x-axis is along the line of separation from the smaller BH to\n",
-      " |                  the larger BH at this time.\n",
-      " |              The y-axis completes the triad.\n",
-      " |              We obtain this frame from the waveform as defined in\n",
-      " |              arxiv:1705.07089.\n",
-      " |      \n",
-      " |              If 'omega0' is given, instead the spins are assumed to be the\n",
-      " |              component spins when the PN orbital frequency = omega0. The\n",
-      " |              spins are assumed to be in the inertial frame, defined as:\n",
-      " |              The z-axis is along the Newtonian orbital angular momentum when the\n",
-      " |                  PN orbital frequency = omega0.\n",
-      " |              The x-axis is along the line of separation from the smaller BH to\n",
-      " |                  the larger BH at this frequency.\n",
-      " |              The y-axis completes the triad.\n",
-      " |              We obtain this frame from PN.\n",
-      " |              Given the spins at omega0, we evolve the spins using PN until\n",
-      " |              the orbital frequency = 0.018 M, then we further evolve the spins\n",
-      " |              using the NRSur7dq2 model (arxiv:1705.07089) until t=-100M from the\n",
-      " |              peak of the waveform.  Then we evaluate the fits using the spins at\n",
-      " |              t=-100 M.  Finally, we transform the remnant spin and kick vectors\n",
-      " |              back to the inertial frame defined above.\n",
-      " |      \n",
-      " |      Optional PN arguments:\n",
-      " |      \n",
-      " |          omega0:\n",
-      " |              Initial dimensionless orbital frequency in units of 1/M, where M is\n",
-      " |              the total mass. If this is given, the spins in x are assumed to be\n",
-      " |              the component spins at this orbital frequency, and in the inertial\n",
-      " |              frame as defined above. The returned remnant spin and kick vectors\n",
-      " |              are also in the same frame.\n",
-      " |              Default: None.\n",
-      " |      \n",
-      " |          PN_approximant:\n",
-      " |              Approximant used to do the PN spin evolution. Choose from\n",
-      " |              'SpinTaylorT1', 'SpinTaylorT4' or 'SpinTaylorT5'.\n",
-      " |              Default: 'SpinTaylorT4'.\n",
-      " |      \n",
-      " |          PN_dt:\n",
-      " |              Dimensionless time step size in units of M (total mass), used for\n",
-      " |              the PN evolution. You may need to increase this if omega0 is very\n",
-      " |              low.\n",
-      " |              Default: 0.1\n",
-      " |      \n",
-      " |          PN_spin_order:\n",
-      " |              Twice the PN order of spin effects. E.g., use 7 for 3.5PN.\n",
-      " |              Default: 7\n",
-      " |      \n",
-      " |          PN_phase_order\n",
-      " |              Twice the PN order in phase. E.g., use 7 for 3.5PN.\n",
-      " |              Default: 7\n",
-      " |      \n",
-      " |      Returns:\n",
-      " |          If fit_key='mC':\n",
-      " |              returns mC, mC_err_est\n",
-      " |              The value and 1-sigma error estimate in remnant mass.\n",
-      " |          If fit_key='chiC':\n",
-      " |              returns chiC, chiC_err_est\n",
-      " |              The value and 1-sigma error estimate in remnant spin vector.\n",
-      " |          If fit_key='velC':\n",
-      " |              returns velC, velC_err_est\n",
-      " |              The value and 1-sigma error estimate in remnant kick vector.\n",
-      " |      \n",
-      " |          By default, these vectors are defined in the coorbital frame at\n",
-      " |              t=-100 M, as described above.\n",
-      " |          If 'omega0' is not None, these are defined in the inertial frame at\n",
-      " |              orbital frequency = omega0, as described above.\n",
-      " |  \n",
       " |  __init__(self, name, load_nrsur=False)\n",
       " |      #-------------------------------------------------------------------------\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Methods inherited from surfinBH.surfinBH.SurFinBH:\n",
+      " |  \n",
+      " |  all(self, *args, **kwargs)\n",
+      " |      Evaluates fit and 1-sigma error estimate for remnant mass, spin\n",
+      " |      and kick velocity.\n",
+      " |      Returns:\n",
+      " |          mC, chiC, velC, mC_err_est, chiC_err_est, velC_err_est\n",
+      " |      \n",
+      " |      chiC, velC, chiC_err_est and velC_err_est are arrays of size 3.\n",
+      " |  \n",
+      " |  chiC(self, *args, **kwargs)\n",
+      " |      Evaluates fit and 1-sigma error estimate for remnant spin.\n",
+      " |      Returns:\n",
+      " |          chiC, chiC_err_est\n",
+      " |      \n",
+      " |      chiC and chiC_err_est are arrays of size 3.\n",
+      " |  \n",
+      " |  mC(self, *args, **kwargs)\n",
+      " |      Evaluates fit and 1-sigma error estimate for remnant mass.\n",
+      " |      Returns:\n",
+      " |          mC, mC_err_est\n",
+      " |  \n",
+      " |  velC(self, *args, **kwargs)\n",
+      " |      Evaluates fit and 1-sigma error estimate for remnant kick velocity.\n",
+      " |      Returns:\n",
+      " |          velC, velC_err_est\n",
+      " |      \n",
+      " |      velC and velC_err_est are arrays of size 3.\n",
       " |  \n",
       " |  ----------------------------------------------------------------------\n",
       " |  Data descriptors inherited from surfinBH.surfinBH.SurFinBH:\n",
@@ -229,19 +242,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mC=9.439e-01 mC_err_est=1.126e-04\n",
-      "chiC=[3.539e-02,1.059e-02,7.409e-01] chiC_err_est=[3.405e-04,3.583e-04,4.113e-04]\n",
-      "velC=[4.640e-04,-1.352e-05,5.270e-03] velC_err_est=[3.423e-05,2.179e-05,6.643e-05]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Note: The component spins, remnant spin and kick are all\n",
     "# assumed to be in the coorbital frame at t=-100M.\n",
@@ -250,24 +253,18 @@
     "q = 1.2\n",
     "chiA = [0.5, 0.05, 0.3]\n",
     "chiB = [-0.5, -0.05, 0.1]\n",
-    "x = [q] + chiA + chiB\n",
     "\n",
-    "# Final mass and its 1-sigma error etimate\n",
-    "mC, mC_err_est = fit('mC', x)\n",
-    "  \n",
-    "# Final spin vector and its 1-sigma error estimate\n",
-    "chiC, chiC_err_est = fit('chiC', x)\n",
-    "  \n",
-    "# Final kick vector and its 1-sigma error estimate\n",
-    "velC, velC_err_est = fit('velC', x)\n",
-    "\n",
-    "print('mC=%.3e mC_err_est=%.3e'%(mC, mC_err_est))\n",
-    "print('chiC=[%.3e,%.3e,%.3e] chiC_err_est=[%.3e,%.3e,%.3e]'%(chiC[0], chiC[1], chiC[2],\n",
-    "                                                             chiC_err_est[0], chiC_err_est[1],\n",
-    "                                                             chiC_err_est[2]))\n",
-    "print('velC=[%.3e,%.3e,%.3e] velC_err_est=[%.3e,%.3e,%.3e]'%(velC[0], velC[1], velC[2],\n",
-    "                                                             velC_err_est[0], velC_err_est[1],\n",
-    "                                                             velC_err_est[2]))"
+    "# remnant mass and 1-sigma error estimate\n",
+    "mC, mC_err = fit.mC(q, chiA, chiB)\n",
+    " \n",
+    "# remnant spin and 1-sigma error estimate\n",
+    "chiC, chiC_err = fit.chiC(q, chiA, chiB)\n",
+    " \n",
+    "# remnant recoil kick and 1-sigma error estimate\n",
+    "velC, velC_err = fit.velC(q, chiA, chiB)\n",
+    " \n",
+    "# All of these together\n",
+    "mC, chiC, velC, mC_err, chiC_err, velC_err = fit.all(q, chiA, chiB)"
    ]
   },
   {
@@ -279,17 +276,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded NRSur7dq2 waveform model\n",
-      "mC=9.437e-01 mC_err_est=7.577e-05\n",
-      "chiC=[5.412e-02,-1.411e-02,7.493e-01] chiC_err_est=[3.178e-04,3.412e-04,3.145e-04]\n",
-      "velC=[5.362e-05,1.348e-04,-5.110e-03] velC_err_est=[1.934e-05,1.709e-05,3.629e-05]\n"
+      "Loaded NRSur7dq2 waveform model\n"
      ]
     }
    ],
@@ -299,31 +293,19 @@
     "\n",
     "# Initial dimensionless orbital frequency (in units of 1/M)\n",
     "omega0 = 7e-3\n",
-    "\n",
-    "# Final mass and its 1-sigma error etimate\n",
-    "mC, mC_err_est = fit('mC', x, omega0=omega0)\n",
     "  \n",
-    "# Final spin vector and its 1-sigma error estimate\n",
-    "chiC, chiC_err_est = fit('chiC', x, omega0=omega0)\n",
-    "  \n",
-    "# Final kick vector and its 1-sigma error estimate\n",
-    "velC, velC_err_est = fit('velC', x, omega0=omega0)\n",
-    "\n",
-    "print('mC=%.3e mC_err_est=%.3e'%(mC, mC_err_est))\n",
-    "print('chiC=[%.3e,%.3e,%.3e] chiC_err_est=[%.3e,%.3e,%.3e]'%(chiC[0], chiC[1], chiC[2],\n",
-    "                                                             chiC_err_est[0], chiC_err_est[1],\n",
-    "                                                             chiC_err_est[2]))\n",
-    "print('velC=[%.3e,%.3e,%.3e] velC_err_est=[%.3e,%.3e,%.3e]'%(velC[0], velC[1], velC[2],\n",
-    "                                                             velC_err_est[0], velC_err_est[1],\n",
-    "                                                             velC_err_est[2]))"
+    "# remnant mass and 1-sigma error estimate\n",
+    "mC, mC_err = fit.mC(q, chiA, chiB, omega0=omega0)\n",
+    " \n",
+    "# remnant spin and 1-sigma error estimate\n",
+    "chiC, chiC_err = fit.chiC(q, chiA, chiB, omega0=omega0)\n",
+    " \n",
+    "# remnant recoil kick and 1-sigma error estimate\n",
+    "velC, velC_err = fit.velC(q, chiA, chiB, omega0=omega0)\n",
+    " \n",
+    "# All of these together\n",
+    "mC, chiC, velC, mC_err, chiC_err, velC_err = fit.all(q, chiA, chiB, omega0=omega0)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
