--- a/examples/example_3dq8.ipynb
+++ b/examples/example_3dq8.ipynb
@@ -99,24 +99,37 @@
       " |  # Load the fit\n",
       " |  fit = surfinBH.LoadFits('surfinBH3dq8')\n",
       " |  \n",
-      " |  # Define params\n",
-      " |  q = 4.3             # Mass ratio q>=1\n",
-      " |  chiA = [0,0,0.6]    # Spin of larger BH (z-direction only)\n",
-      " |  chiB = [0,0,-0.7]   # Spin of smaller BH (z-direction only)\n",
+      " |  We provide the following call methods:\n",
+      " |      # remnant mass and 1-sigma error estimate\n",
+      " |      mC, mC_err = fit.mC(q, chiA, chiB, **kwargs)\n",
       " |  \n",
-      " |  ## Evaluate fits\n",
+      " |      # remnant spin and 1-sigma error estimate\n",
+      " |      chiC, chiC_err = fit.chiC(q, chiA, chiB, **kwargs)\n",
       " |  \n",
-      " |  # remnant mass and 1-sigma error estimate\n",
-      " |  mC, mC_err = fit.mC(q, chiA, chiB)\n",
+      " |      # remnant recoil kick and 1-sigma error estimate\n",
+      " |      velC, velC_err = fit.velC(q, chiA, chiB, **kwargs)\n",
       " |  \n",
-      " |  # remnant spin and 1-sigma error estimate\n",
-      " |  chiC, chiC_err = fit.chiC(q, chiA, chiB)\n",
+      " |      # All of these together\n",
+      " |      mC, chiC, velC, mC_err, chiC_err, velC_err\n",
+      " |          = fit.all(q, chiA, chiB, **kwargs)\n",
       " |  \n",
-      " |  # remnant recoil kick and 1-sigma error estimate\n",
-      " |  velC, velC_err = fit.velC(q, chiA, chiB)\n",
+      " |  The arguments for each of these call methods are as follows:\n",
+      " |  Arguments:\n",
+      " |      q:      Mass ratio (q>=1)\n",
       " |  \n",
-      " |  # All of these together\n",
-      " |  mC, chiC, velC, mC_err, chiC_err, velC_err = fit.all(q, chiA, chiB)\n",
+      " |      chiA:   Dimensionless spin of the larger BH (array of size 3).\n",
+      " |  \n",
+      " |      chiB:   Dimensionless spin of the smaller BH (array of size 3).\n",
+      " |              This model allows only nonprecessing spins, so only the\n",
+      " |              z-components of these arrays should be non-zero.\n",
+      " |  \n",
+      " |  Optional arguments:\n",
+      " |      allow_extrap:\n",
+      " |          If False, raises a warning when q > 8.1 or |chiA|,|chiB| > 0.81,\n",
+      " |              and raises an error when q > 10.1 or |chiA|,|chiB| > 1.\n",
+      " |          If True, allows extrapolation to any q and |chiA|,|chiB| <= 1.\n",
+      " |              Use at your own risk.\n",
+      " |          Default: False.\n",
       " |  \n",
       " |  The spin and kick vectors are defined in the coorbital frame at t=-100 M\n",
       " |  from the peak of the waveform. This frame is defined as:\n",
