--- a/examples/example_7dq2.ipynb
+++ b/examples/example_7dq2.ipynb
@@ -89,7 +89,7 @@
       " |      q <= 2, |chiA| <= 0.8, |chiB| <= 0.8\n",
       " |  \n",
       " |  However, it extrapolates reasonably to:\n",
-      " |      q <= 3, |chiA| <= 1, |chiB| <= 1\n",
+      " |      q <= 4, |chiA| <= 1, |chiB| <= 1\n",
       " |  \n",
       " |  =========================================================================\n",
       " |  Usage:\n",
@@ -148,7 +148,13 @@
       " |          t=-100 M.  Finally, we transform the remnant spin and kick vectors\n",
       " |          back to the inertial frame defined above.\n",
       " |  \n",
-      " |  Optional PN arguments:\n",
+      " |  Optional arguments:\n",
+      " |      allow_extrap:\n",
+      " |          If False, raises a warning when q > 2.1 or |chiA|,|chiB| > 0.81,\n",
+      " |              and raises an error when q > 4.1 or |chiA|,|chiB| > 1.\n",
+      " |          If True, allows extrapolation to any q and |chiA|,|chiB| <= 1.\n",
+      " |              Use at your own risk.\n",
+      " |          Default: False.\n",
       " |  \n",
       " |      omega0:\n",
       " |          Initial dimensionless orbital frequency in units of 1/M, where M is\n",
