--- a/examples/example_3dq8.ipynb
+++ b/examples/example_3dq8.ipynb
@@ -80,8 +80,8 @@
       "\n",
       "class Fit3dq8(surfinBH.surfinBH.SurFinBH)\n",
       " |  A class for the surfinBH3dq8 model presented in Varma et al., 2018,\n",
-      " |  in prep. This model predicts the final mass mC, final spin chiC and final\n",
-      " |  kick velocity velC, for the remnants of nonprecessing binary black hole\n",
+      " |  in prep. This model predicts the final mass mf, final spin chif and final\n",
+      " |  kick velocity vf, for the remnants of nonprecessing binary black hole\n",
       " |  systems. The fits are done using Gaussian Process Regression (GPR) and\n",
       " |  also provide an error estimate along with the fit value.\n",
       " |  \n",
@@ -101,16 +101,16 @@
       " |  \n",
       " |  We provide the following call methods:\n",
       " |      # remnant mass and 1-sigma error estimate\n",
-      " |      mC, mC_err = fit.mC(q, chiA, chiB, **kwargs)\n",
+      " |      mf, mf_err = fit.mf(q, chiA, chiB, **kwargs)\n",
       " |  \n",
       " |      # remnant spin and 1-sigma error estimate\n",
-      " |      chiC, chiC_err = fit.chiC(q, chiA, chiB, **kwargs)\n",
+      " |      chif, chif_err = fit.chif(q, chiA, chiB, **kwargs)\n",
       " |  \n",
       " |      # remnant recoil kick and 1-sigma error estimate\n",
-      " |      velC, velC_err = fit.velC(q, chiA, chiB, **kwargs)\n",
+      " |      vf, vf_err = fit.vf(q, chiA, chiB, **kwargs)\n",
       " |  \n",
       " |      # All of these together\n",
-      " |      mC, chiC, velC, mC_err, chiC_err, velC_err\n",
+      " |      mf, chif, vf, mf_err, chif_err, vf_err\n",
       " |          = fit.all(q, chiA, chiB, **kwargs)\n",
       " |  \n",
       " |  The arguments for each of these call methods are as follows:\n",
@@ -156,28 +156,28 @@
       " |      Evaluates fit and 1-sigma error estimate for remnant mass, spin\n",
       " |      and kick velocity.\n",
       " |      Returns:\n",
-      " |          mC, chiC, velC, mC_err_est, chiC_err_est, velC_err_est\n",
+      " |          mf, chif, vf, mf_err_est, chif_err_est, vf_err_est\n",
       " |      \n",
-      " |      chiC, velC, chiC_err_est and velC_err_est are arrays of size 3.\n",
+      " |      chif, vf, chif_err_est and vf_err_est are arrays of size 3.\n",
       " |  \n",
-      " |  chiC(self, *args, **kwargs)\n",
+      " |  chif(self, *args, **kwargs)\n",
       " |      Evaluates fit and 1-sigma error estimate for remnant spin.\n",
       " |      Returns:\n",
-      " |          chiC, chiC_err_est\n",
+      " |          chif, chif_err_est\n",
       " |      \n",
-      " |      chiC and chiC_err_est are arrays of size 3.\n",
+      " |      chif and chif_err_est are arrays of size 3.\n",
       " |  \n",
-      " |  mC(self, *args, **kwargs)\n",
+      " |  mf(self, *args, **kwargs)\n",
       " |      Evaluates fit and 1-sigma error estimate for remnant mass.\n",
       " |      Returns:\n",
-      " |          mC, mC_err_est\n",
+      " |          mf, mf_err_est\n",
       " |  \n",
-      " |  velC(self, *args, **kwargs)\n",
+      " |  vf(self, *args, **kwargs)\n",
       " |      Evaluates fit and 1-sigma error estimate for remnant kick velocity.\n",
       " |      Returns:\n",
-      " |          velC, velC_err_est\n",
+      " |          vf, vf_err_est\n",
       " |      \n",
-      " |      velC and velC_err_est are arrays of size 3.\n",
+      " |      vf and vf_err_est are arrays of size 3.\n",
       " |  \n",
       " |  ----------------------------------------------------------------------\n",
       " |  Data descriptors inherited from surfinBH.surfinBH.SurFinBH:\n",
@@ -215,16 +215,16 @@
     "## Evaluate the fits and GPR error estimate.\n",
     "\n",
     "# remnant mass and 1-sigma error estimate\n",
-    "mC, mC_err = fit.mC(q, chiA, chiB)\n",
+    "mf, mf_err = fit.mf(q, chiA, chiB)\n",
     "\n",
     "# remnant spin and 1-sigma error estimate\n",
-    "chiC, chiC_err = fit.chiC(q, chiA, chiB)\n",
+    "chif, chif_err = fit.chif(q, chiA, chiB)\n",
     "\n",
     "# remnant recoil kick and 1-sigma error estimate\n",
-    "velC, velC_err = fit.velC(q, chiA, chiB)\n",
+    "vf, vf_err = fit.vf(q, chiA, chiB)\n",
     "\n",
     "# All of these together\n",
-    "mC, chiC, velC, mC_err, chiC_err, velC_err = fit.all(q, chiA, chiB)"
+    "mf, chif, vf, mf_err, chif_err, vf_err = fit.all(q, chiA, chiB)"
    ]
   },
   {
