Make omega_switch an optional param

--- a/examples/example_7dq2.ipynb
+++ b/examples/example_7dq2.ipynb
@@ -142,11 +142,11 @@
       " |          The y-axis completes the triad.\n",
       " |          We obtain this frame from PN.\n",
       " |          Given the spins at omega0, we evolve the spins using PN until\n",
-      " |          the orbital frequency = 0.018 M, then we further evolve the spins\n",
-      " |          using the NRSur7dq2 model (arxiv:1705.07089) until t=-100M from the\n",
-      " |          peak of the waveform.  Then we evaluate the fits using the spins at\n",
-      " |          t=-100 M.  Finally, we transform the remnant spin and kick vectors\n",
-      " |          back to the inertial frame defined above.\n",
+      " |          the orbital frequency = omega_switch, then we further evolve the\n",
+      " |          spins using the NRSur7dq2 model (arxiv:1705.07089) until t=-100M\n",
+      " |          from the peak of the waveform. Then we evaluate the fits using the\n",
+      " |          spins at t=-100 M. Finally, we transform the remnant spin and kick\n",
+      " |          vectors back to the inertial frame defined above.\n",
       " |  \n",
       " |  Optional arguments:\n",
       " |      allow_extrap:\n",
@@ -179,9 +179,16 @@
       " |          Twice the PN order of spin effects. E.g., use 7 for 3.5PN.\n",
       " |          Default: 7\n",
       " |  \n",
-      " |      PN_phase_order\n",
+      " |      PN_phase_order:\n",
       " |          Twice the PN order in phase. E.g., use 7 for 3.5PN.\n",
       " |          Default: 7\n",
+      " |  \n",
+      " |      omega_switch:\n",
+      " |          Dimensionless orbital frequency at which to switch from PN to\n",
+      " |          NRSur7dq2 model. You may need to increase this if the NRSur7dq2\n",
+      " |          model raises an exception like:\n",
+      " |          \"Got omega_ref = 0.0180 < 0.0184 = omega_0, too small!\"\n",
+      " |          Default: 0.018\n",
       " |  \n",
       " |  Method resolution order:\n",
       " |      Fit7dq2\n",
