--- a/examples/example_3dq8.ipynb
+++ b/examples/example_3dq8.ipynb
@@ -11,16 +11,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/vijay/opt/softs/anaconda2/lib/python2.7/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import surfinBH"
    ]
@@ -79,11 +70,12 @@
       "Help on Fit3dq8 in module surfinBH._fit_evaluators.fit_3dq8 object:\n",
       "\n",
       "class Fit3dq8(surfinBH.surfinBH.SurFinBH)\n",
-      " |  A class for the surfinBH3dq8 model presented in Varma et al., 2018,\n",
-      " |  in prep. This model predicts the final mass mf, final spin chif and final\n",
-      " |  kick velocity vf, for the remnants of nonprecessing binary black hole\n",
-      " |  systems. The fits are done using Gaussian Process Regression (GPR) and\n",
-      " |  also provide an error estimate along with the fit value.\n",
+      " |  A class for the surfinBH3dq8 model presented in Varma et al.,\n",
+      " |  arxiv:1809.09125. This model predicts the final mass mf, final\n",
+      " |  spin chif and final kick velocity vf, for the remnants of nonprecessing\n",
+      " |  binary black hole systems. The fits are done using Gaussian Process\n",
+      " |  Regression (GPR) and also provide an error estimate along with the fit\n",
+      " |  value.\n",
       " |  \n",
       " |  This model has been trained in the parameter space:\n",
       " |      q <= 8, |chiAz| <= 0.8, |chiBz| <= 0.8\n",
