--- a/examples/example_7dq2.ipynb
+++ b/examples/example_7dq2.ipynb
@@ -11,16 +11,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/vijay/opt/softs/anaconda2/lib/python2.7/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import surfinBH"
    ]
@@ -79,11 +70,12 @@
       "Help on Fit7dq2 in module surfinBH._fit_evaluators.fit_7dq2 object:\n",
       "\n",
       "class Fit7dq2(surfinBH.surfinBH.SurFinBH)\n",
-      " |  A class for the surfinBH7dq2 model presented in Varma et al., 2018,\n",
-      " |  in prep. This model predicts the final mass mf, final spin vector chif and\n",
-      " |  final kick velocity vector vf, for the remnants of precessing binary\n",
-      " |  black hole systems.  The fits are done using Gaussian Process Regression\n",
-      " |  (GPR) and also provide an error estimate along with the fit value.\n",
+      " |  A class for the surfinBH7dq2 model presented in Varma et al.,\n",
+      " |  arxiv:1809.09125. This model predicts the final mass mf, final spin vector\n",
+      " |  chif and final kick velocity vector vf, for the remnants of precessing\n",
+      " |  binary black hole systems.  The fits are done using Gaussian Process\n",
+      " |  Regression (GPR) and also provide an error estimate along with the fit\n",
+      " |  value.\n",
       " |  \n",
       " |  This model has been trained in the parameter space:\n",
       " |      q <= 2, |chiA| <= 0.8, |chiB| <= 0.8\n",
@@ -304,7 +296,7 @@
     "# Note: The component spins, remnant spin and kick are all\n",
     "# assumed to be in the inertial frame defined at orbital frequency=omega0.\n",
     "\n",
-    "# Initial dimensionless orbital frequency (in units of 1/M)\n",
+    "# Initial dimensionless orbital frequency (in units of rad/M)\n",
     "omega0 = 7e-3\n",
     "  \n",
     "# remnant mass and 1-sigma error estimate\n",
