--- a/examples/example_3dq8.ipynb
+++ b/examples/example_3dq8.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example usage of surfinBH3dq8 fit."
+    "# Example usage of NRSur3dq8Remnant fit."
    ]
   },
   {
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fit_name = 'surfinBH3dq8'"
+    "fit_name = 'NRSur3dq8Remnant'"
    ]
   },
   {
@@ -41,7 +41,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded surfinBH3dq8 fit.\n"
+      "Loaded NRSur3dq8Remnant fit.\n"
      ]
     }
    ],
@@ -70,8 +70,10 @@
       "Help on Fit3dq8 in module surfinBH._fit_evaluators.fit_3dq8 object:\n",
       "\n",
       "class Fit3dq8(surfinBH.surfinBH.SurFinBH)\n",
-      " |  A class for the surfinBH3dq8 model presented in Varma et al.,\n",
-      " |  arxiv:1809.09125. This model predicts the final mass mf, final\n",
+      " |  A class for the NRSur3dq8Remnant model presented in Varma et al.,\n",
+      " |  arxiv:1809.09125. This model is referred to as surfinBH3dq8 in the paper.\n",
+      " |  \n",
+      " |  This model predicts the final mass mf, final\n",
       " |  spin chif and final kick velocity vf, for the remnants of nonprecessing\n",
       " |  binary black hole systems. The fits are done using Gaussian Process\n",
       " |  Regression (GPR) and also provide an error estimate along with the fit\n",
@@ -89,7 +91,7 @@
       " |  import surfinBH\n",
       " |  \n",
       " |  # Load the fit\n",
-      " |  fit = surfinBH.LoadFits('surfinBH3dq8')\n",
+      " |  fit = surfinBH.LoadFits('NRSur3dq8Remnant')\n",
       " |  \n",
       " |  We provide the following call methods:\n",
       " |      # remnant mass and 1-sigma error estimate\n",
